fix scrollbar colors

--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,24 @@
 
 ::-webkit-scrollbar {
   width: 10px;
-  height: 12px;
+  height: 10px;
 }
 ::-webkit-scrollbar-track {
+  background: #ddd;
+}
+.dark ::-webkit-scrollbar-track {
   background: #1a1a1a;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 25px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 body {
   @apply bg-slate-100 dark:bg-neutral-950 dark:text-white scroll-smooth
 }
